[Releng] Revert the replacement of new URL()